Create Jekyll site with navigation.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
-<header class="site-header">
-  <div class="site-header-content">
-    <div class="site-title">
-      <a href="{{ "/" | relative_url }}">{{ site.title | default: "Project Q Publishing" }}</a>
-    </div>
+<header class="site-header" role="banner">
+  <div class="wrapper">
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     
     {% include navigation.html %}
   </div>
