--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,33 @@
-<footer class="site-footer">
-  <div class="site-footer-content">
-    <div class="footer-info">
-      <p>&copy; {{ "now" | date: "%Y" }} {{ site.title | default: "Project Q Publishing" }}. All rights reserved.</p>
-      {% if site.email %}
-        <p>Contact: <a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
-      {% endif %}
+<footer class="site-footer h-card">
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper">
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <li class="p-name">
+            {%- if site.author -%}
+              {{ site.author | escape }}
+            {%- else -%}
+              {{ site.title | escape }}
+            {%- endif -%}
+            </li>
+            {%- if site.email -%}
+            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {%- endif -%}
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-2">
+        {%- include social.html -%}
+      </div>
+
+      <div class="footer-col footer-col-3">
+        <p>{{- site.description | escape -}}</p>
+      </div>
     </div>
-    
-    {% if site.social_links %}
-    <div class="footer-social">
-      {% for social in site.social_links %}
-        <a href="{{ social[1] }}" target="_blank" rel="noopener noreferrer">{{ social[0] | capitalize }}</a>
-      {% endfor %}
-    </div>
-    {% endif %}
+
   </div>
+
 </footer>
