--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  </head>
+  {%- include head.html -%}
+
   <body>
-    <div class="container-lg px-3 my-5 markdown-body">
-      {% include header.html %}
-      
-      <main>
+
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
         {{ content }}
-      </main>
-      
-      {% include footer.html %}
-    </div>
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
   </body>
+
 </html>
