--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
 <nav class="site-nav">
   <div class="trigger">
     <a class="page-link" href="{{ "/" | relative_url }}">Home</a>
-    <a class="page-link" href="{{ "/about/" | relative_url }}">About</a>
-    <a class="page-link" href="{{ "/books/" | relative_url }}">Books</a>
-    <a class="page-link" href="{{ "/contact/" | relative_url }}">Contact</a>
+    <a class="page-link" href="{{ "/about" | relative_url }}">About</a>
+    <a class="page-link" href="{{ "/books" | relative_url }}">Books</a>
+    <a class="page-link" href="{{ "/contact" | relative_url }}">Contact</a>
   </div>
 </nav>
