Create variables and color system files.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,4 +1,8 @@
 // Custom styles for Project Q Publishing
+// Import variable system first
+@import "variables";
+@import "colors";
+
 // Navigation always below site title
 
 // Force navigation to display below title at all screen sizes
