Implement typography scale and font loading.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,6 +2,7 @@
 // Import variable system first
 @import "variables";
 @import "colors";
+@import "typography";
 
 // Navigation always below site title
 
