--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header class="site-header" role="banner">
   <div class="wrapper">
     <a class="site-logo" rel="author" href="{{ "/" | relative_url }}">
-      <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Project Q Publishing Logo" class="logo-image">
-      <span class="logo-text">{{ site.title | escape }}</span>
+      <img src="{{ '/assets/images/logo with text.png' | relative_url }}" alt="Project Q Publishing Logo" class="logo-image">
     </a>
     
     {% include navigation.html %}
