--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -53,43 +53,55 @@ layout: default
   </aside>
   {% endif %}
   
-  {% comment %} Related Books Recommendations {% endcomment %}
+  {% comment %} Related Books Recommendations - Simplified approach {% endcomment %}
   {% assign related_books = '' | split: '' %}
   {% assign current_book = page %}
   
-  {% comment %} Find books with shared topics or programming languages {% endcomment %}
+  {% comment %} First, find books with shared topics or programming languages {% endcomment %}
   {% for book in site.books %}
     {% unless book.url == current_book.url %}
-      {% assign relevance_score = 0 %}
+      {% assign is_related = false %}
       
       {% comment %} Check for shared topics {% endcomment %}
       {% if current_book.topics and book.topics %}
-        {% assign shared_topics = current_book.topics | where_exp: "topic", "book.topics contains topic" %}
-        {% assign relevance_score = relevance_score | plus: shared_topics.size %}
+        {% for current_topic in current_book.topics %}
+          {% if book.topics contains current_topic %}
+            {% assign is_related = true %}
+            {% break %}
+          {% endif %}
+        {% endfor %}
       {% endif %}
       
       {% comment %} Check for shared programming languages {% endcomment %}
-      {% if current_book.programming_languages and book.programming_languages %}
-        {% assign shared_languages = current_book.programming_languages | where_exp: "lang", "book.programming_languages contains lang" %}
-        {% assign relevance_score = relevance_score | plus: shared_languages.size %}
-      {% endif %}
+      {% unless is_related %}
+        {% if current_book.programming_languages and book.programming_languages %}
+          {% for current_lang in current_book.programming_languages %}
+            {% if book.programming_languages contains current_lang %}
+              {% assign is_related = true %}
+              {% break %}
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+      {% endunless %}
       
       {% comment %} Check for same difficulty level {% endcomment %}
-      {% if current_book.difficulty_level and book.difficulty_level == current_book.difficulty_level %}
-        {% assign relevance_score = relevance_score | plus: 1 %}
-      {% endif %}
+      {% unless is_related %}
+        {% if current_book.difficulty_level and book.difficulty_level == current_book.difficulty_level %}
+          {% assign is_related = true %}
+        {% endif %}
+      {% endunless %}
       
-      {% comment %} Add books with any relevance {% endcomment %}
-      {% if relevance_score > 0 %}
-        {% assign book_with_score = book | jsonify | prepend: relevance_score | prepend: '{"score":' | append: ',"book":' | append: '}' %}
-        {% assign related_books = related_books | push: book_with_score %}
+      {% comment %} Add related books {% endcomment %}
+      {% if is_related %}
+        {% assign related_books = related_books | push: book %}
       {% endif %}
     {% endunless %}
   {% endfor %}
   
-  {% comment %} If no related books found by topics/languages, show other books {% endcomment %}
+  {% comment %} If no related books found, show other recent books {% endcomment %}
   {% if related_books.size == 0 %}
-    {% for book in site.books limit: 3 %}
+    {% assign sorted_books = site.books | sort: 'publication_date' | reverse %}
+    {% for book in sorted_books limit: 3 %}
       {% unless book.url == current_book.url %}
         {% assign related_books = related_books | push: book %}
       {% endunless %}
