--- a/_sass/_brand-integration.scss
+++ b/_sass/_brand-integration.scss
@@ -66,7 +66,7 @@
   
   h2 {
     text-align: left;
-    color: $primary-600;
+    // color: $primary-600;
     margin-bottom: $spacing-xl;
     position: relative;
     
@@ -77,7 +77,8 @@
       left: 0;
       width: 60px;
       height: 3px;
-      background-color: $accent-500;
+      //background-color: $accent-500;
+      background-color: $primary-600;
       border-radius: 2px;
     }
   }
@@ -107,7 +108,7 @@
   }
   
   h2 {
-    text-align: left;
+    text-align: center;
     color: $primary-600;
     margin-bottom: $spacing-xl;
   }
@@ -140,7 +141,7 @@
   padding: $spacing-xl 0;
   
   h2 {
-    color: $secondary-600;
+    //color: $secondary-600;
     margin-bottom: $spacing-lg;
   }
   
