Add basic search functionality.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -8,6 +8,7 @@
 @import "components";
 @import "navigation";
 @import "brand-integration";
+@import "search";
 
 // Legacy navigation styles have been replaced with comprehensive navigation system
 // All navigation styling is now handled in _navigation.scss
