--- a/_sass/_search.scss
+++ b/_sass/_search.scss
@@ -13,11 +13,12 @@
 
   #search-input {
     width: 100%;
-    padding: 0.75rem 2.5rem 0.75rem 1rem;
+    padding: 0.75rem 3rem 0.75rem 1rem;
     font-size: 1rem;
     border: 2px solid #e1e4e8;
     border-radius: 4px;
     transition: border-color 0.2s ease;
+    box-sizing: border-box;
 
     &:focus {
       outline: none;
@@ -31,11 +32,12 @@
 
   .search-clear {
     position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
+    right: 2px;
+    top: 2px;
+    bottom: 2px;
     background: none;
     border: none;
+    border-radius: 0 2px 2px 0;
     font-size: 1.5rem;
     color: #6a737d;
     cursor: pointer;
@@ -43,6 +45,8 @@
     line-height: 1;
     display: none;
     transition: color 0.2s ease;
+    align-items: center;
+    justify-content: center;
 
     &:hover {
       color: #0000ff;
@@ -50,8 +54,8 @@
 
     &:focus {
       outline: 2px solid #0000ff;
-      outline-offset: -2px;
-      border-radius: 0 4px 4px 0;
+      outline-offset: -4px;
+      border-radius: 0 2px 2px 0;
     }
   }
 
