--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,9 @@
     <a class="site-logo" rel="author" href="{{ "/" | relative_url }}">
       <img src="{{ '/assets/images/logo with text.png' | relative_url }}" alt="Project Q Publishing Logo" class="logo-image">
     </a>
-    
+
     {% include navigation.html %}
+
+    {% include search-box.html %}
   </div>
 </header>
