Tighten search box placeholder test.

--- a/_includes/search-box.html
+++ b/_includes/search-box.html
@@ -1,6 +1,6 @@
 <div id="search-container">
   <div class="search-wrapper">
-    <input type="text" id="search-input" placeholder="Search books by title, author, topic, or language...">
+    <input type="text" id="search-input" placeholder="Search books...">
     <button type="button" id="search-clear" class="search-clear" aria-label="Clear search">&times;</button>
   </div>
   <ul id="results-container"></ul>
