--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,9 @@
       <img src="{{ '/assets/images/logo with text.png' | relative_url }}" alt="Project Q Publishing Logo" class="logo-image">
     </a>
 
-    {% include navigation.html %}
-
-    {% include search-box.html %}
+    <div class="nav-search-container">
+      {% include navigation.html %}
+      {% include search-box.html %}
+    </div>
   </div>
 </header>
