--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,6 +9,7 @@
 @import "navigation";
 @import "brand-integration";
 @import "search";
+@import "books";
 
 // Legacy navigation styles have been replaced with comprehensive navigation system
 // All navigation styling is now handled in _navigation.scss
