--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -10,6 +10,7 @@
 @import "brand-integration";
 @import "search";
 @import "books";
+@import "social-share";
 
 // Legacy navigation styles have been replaced with comprehensive navigation system
 // All navigation styling is now handled in _navigation.scss
