Add author socials to the book page.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -11,6 +11,7 @@
 @import "search";
 @import "books";
 @import "social-share";
+@import "author-social";
 
 // Legacy navigation styles have been replaced with comprehensive navigation system
 // All navigation styling is now handled in _navigation.scss
