--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -12,6 +12,7 @@
 @import "books";
 @import "social-share";
 @import "author-social";
+@import "footer-social";
 
 // Legacy navigation styles have been replaced with comprehensive navigation system
 // All navigation styling is now handled in _navigation.scss
