--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,18 +5,16 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        {%- if site.email -%}
         <div class="contact-button-wrapper">
           <h3 class="contact-title">Contact</h3>
-          <a class="contact-button" href="mailto:{{ site.email }}">
+          <a class="contact-button" href="/contact">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" xmlns="http://www.w3.org/2000/svg">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
               <polyline points="22,6 12,13 2,6"></polyline>
             </svg>
-            <span>{{ site.email }}</span>
+            <span>Contact Us</span>
           </a>
         </div>
-        {%- endif -%}
       </div>
 
       <div class="footer-col footer-col-2">
