Add Formspree form to the contact page.

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -13,6 +13,7 @@
 @import "social-share";
 @import "author-social";
 @import "footer-social";
+@import "contact-form";
 
 // Legacy navigation styles have been replaced with comprehensive navigation system
 // All navigation styling is now handled in _navigation.scss
