--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,3 +18,7 @@ layout: default
 {% if page.body_class == "books-page" %}
 <script src="{{ '/assets/js/books-filter.js' | relative_url }}"></script>
 {% endif %}
+
+{% if page.body_class == "contact-page" %}
+<script src="{{ '/assets/js/contact-form.js' | relative_url }}"></script>
+{% endif %}
